--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form_data {
+  padding: 10px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form_field {
+  margin: 5px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.error {
+  color: red;
+}
+nav a {
+  padding: 4px;
+  margin: 4px;
+}
+nav {
+  background-color: aqua;
+  padding: 15px;
+}
+nav a.active {
+  text-decoration: none;
+  font-weight: bold;
+}
+.user-card {
+  width: 300px;
+  padding: 5px;
+  background-color: #f0f0f0;
+  box-shadow: 1px 4px 6px 0px;
+  margin: 20px;
+}
+.user-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
 }
-
-.App-link {
-  color: #61dafb;
+.nav-card {
+  display: flex;
+  justify-content: flex-end;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  cursor: pointer;
+}
+.nested1 {
+  width: 500px;
+  border: 1px solid grey;
 }
